--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -7,7 +7,9 @@ $text-dark: #222222;
 $background: #FFFFFF;
 $background-grey: #F9F9F9;
 
+
 $white: #fff;
+$grey: #A3A3A3;
 
 $gridOne: #56504F;
 $gridThree: #A59E90;
