--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -4,7 +4,7 @@
 @import "./home-highlight";
 @import "./people-say";
 @import "./home-partnerships";
-@import "../../components/footer";
+@import "../../components/footer/footer.scss";
 
 .header-section {
     nav {
