--- a/styles/components/footer/footer.scss
+++ b/styles/components/footer/footer.scss
@@ -6,20 +6,35 @@
     background-repeat: no-repeat;
     background-image: cover;
     padding: 10% 5% 5% 5%;
-    @media screen and (min-width:1441px) {
+    @media screen and (min-width: 1441px) {
         height: 500px;
         background-image: url("../../../assets/footer-bg-hd.png");
+    }
+    @media screen and (max-width: 1280px) {
+        height: 400px;
+        background-image: url("../../../assets/footer-bg-laptop.png");
+    }
+    @media screen and (max-width: 900px) {
+        height: 500px;
+        background-image: none;
+        background-color: $secondary;
+        border-top: 10px solid $primary;
     }
     @media screen and (max-width: 600px) {
         height: 600px;
         background-image: none;
         background-color: $secondary;
+        border-top: 10px solid $primary;
     }
     .footer-body{
         height: 100%;
         display: grid;
         gap: 2.5% 5%;
         grid-template-columns: 1fr 1fr 1fr;
+        @media screen and (max-width: 900px) {
+            grid-template-columns: 1fr 1fr;
+            gap: 5% 2.5%;
+        }
         @media screen and (max-width: 600px) {
             grid-template-columns: 1fr;
             gap: 5% 2.5%;
