--- a/styles/pages/home/home.css
+++ b/styles/pages/home/home.css
@@ -2009,6 +2009,7 @@ body {
     height: 600px;
     background-image: none;
     background-color: #72725D;
+    border-top: 5px solid #F9CA48;
   }
 }
 
