fixed header component

--- a/styles/components/header/header.scss
+++ b/styles/components/header/header.scss
@@ -1,6 +1,8 @@
 @import '../../base/base-style.scss';
+
 @import '../../sass/mixins';
 @import '../../sass/variables';
+@import '../../sass/typography';
 
 
 .header-section {
@@ -9,16 +11,18 @@
         justify-content: space-between;
         align-items: center;
         background-color: $white;
-        padding: 1% 5%;
+        padding: .7rem 5rem;
         .logo {
             img {
                 height: 100%;
             }
         }
         .nav-links {
+            width: 50%;
+
             display: flex;
             justify-content: space-around;
-            width: 50%;
+            gap: 2rem;
 
             li {
                 list-style-type: none;
@@ -29,9 +33,10 @@
                     font-size: calc(10px + 0.5vw);
                     padding: 10px 0;
                     transition: 0.3s;
-                    @media screen and (max-width:600px) {
-                        font-size: 16px;
-                    }
+                    white-space: nowrap;
+                    // @media screen and (max-width:600px) {
+                    //     font-size: 16px;
+                    // }
                     &:hover{
                         color: $primary;
                     }
@@ -67,3 +72,59 @@
     }
 }
 
+// animation
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+
+// media queries
+
+@include response (phone) {
+    .header-section{
+        z-index: 1000;
+        nav{
+            height: 80px;
+            .nav-links{
+                position: absolute;
+                right: 0;
+                height: 90vh;
+                top: 80px;
+                background-color: $text-dark;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                transform: translateY(calc(-100% - 80px));
+                transition: transform 0.3s ease-in;
+                z-index: 2;
+                li{
+                    opacity: 0;
+                    padding: 5% 0;
+                    a{
+                        color: $text-light;
+                    }
+                }
+            }   
+            .logo {
+                img {
+                    height: 50%;
+                }
+            } 
+            .nav-active{
+                transform: translateY(0%);
+            }                     
+            .burger {
+                display: block;
+            }
+        }
+    }
+}
