--- a/styles/pages/community/community.css
+++ b/styles/pages/community/community.css
@@ -127,6 +127,16 @@ p {
           box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
+@media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
