--- a/styles/pages/home/home.css
+++ b/styles/pages/home/home.css
@@ -132,12 +132,40 @@ p {
           box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
+@media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   overflow-x: hidden;
 }
 
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
 /*
 0 - 430px;       small-phone
 430 - 568px:     medium-phone
@@ -1983,6 +2011,16 @@ p {
           box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
+@media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
@@ -2168,7 +2206,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   background-color: #fff;
-  padding: 1% 5%;
+  padding: .7rem 5rem;
 }
 
 .header-section nav .logo img {
@@ -2448,7 +2486,7 @@ body {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 40em) {
   .header-section {
     z-index: 1000;
   }
