header component issue solved and set the header to all the pages

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,8 +1,8 @@
-@import '../../base/base-style.scss';
+@import '../base/base-style.scss';
 
-@import '../../sass/mixins';
-@import '../../sass/variables';
-@import '../../sass/typography';
+@import '../sass/mixins';
+@import '../sass/variables';
+@import '../sass/typography';
 
 
 .header-section {
