--- a/styles/pages/about/about.scss
+++ b/styles/pages/about/about.scss
@@ -1,6 +1,7 @@
 @import '../../base/base-style.scss';
 
 @import '../../components/button';
+@import '../../components/header';
 
 @import '../../sass/variables';
 @import '../../sass/mixins';
