--- a/styles/pages/community/community.scss
+++ b/styles/pages/community/community.scss
@@ -1,4 +1,7 @@
 @import "../../base/base-style.scss";
+
+@import "../../components/header";
+
 @import "./resources-slider";
 @import "./blog-slider";
 
