--- a/styles/pages/home/home.css
+++ b/styles/pages/home/home.css
@@ -2004,12 +2004,28 @@ body {
   }
 }
 
+@media screen and (max-width: 1280px) {
+  .footer-container {
+    height: 400px;
+    background-image: url("../../../assets/footer-bg-laptop.png");
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer-container {
+    height: 500px;
+    background-image: none;
+    background-color: #72725D;
+    border-top: 10px solid #F9CA48;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .footer-container {
     height: 600px;
     background-image: none;
     background-color: #72725D;
-    border-top: 5px solid #F9CA48;
+    border-top: 10px solid #F9CA48;
   }
 }
 
@@ -2020,6 +2036,14 @@ body {
   gap: 2.5% 5%;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
+}
+
+@media screen and (max-width: 900px) {
+  .footer-container .footer-body {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    gap: 5% 2.5%;
+  }
 }
 
 @media screen and (max-width: 600px) {
